# gemini-handler

./: .gitignore  Dockerfile  README.en.md  README.md  config.yaml  config_example.yaml  demo.py  docker-compose.yml  gemini_handler.py  gemini_service.py  litellm_config.py  pyproject.toml  requirements.txt  setup.py  test.py
examples/: auto_proxy.py  embedding_demo.py  image_with_structure_output.py  litellm-intergration.py  litellm_config.py  ocr.py  rag_demo.py  simple_rag.py  structured_output_demo.py  system_prompt_demo.py  test-proxy.py
gemini_handler/: __init__.py  auto_proxy.py  cli.py  config.py  config_loader.py  content_generation.py  data_models.py  embedding.py  file_handler.py  file_operations.py  gemini_handler.py  key_rotation.py  litellm_integration.py  litellm_provider.py  proxy.py  response_handler.py  server.py  strategies.py
tests/: conftest.py  test_config.yaml
tests/integration/: test_content_generation.py  test_file_handling.py
tests/unit/: test_gemini_handler.py  test_key_rotation.py  test_response_handler.py
utils/: get_all_models.py
v2/: Dockerfile  call.py  docker-compose.yml  fingerprint.py  log.md  main.py  main_2.py  requirements.txt  usage.md  usage.py
v2/gemini/: advanced_features.py  config.py  core_interactions.py  discovery.py  main_runner.py  multimodal.py  utils.py
v2/test/: README.md  config.yaml  gemini_gateway.py  proxy_server.py  server.py
