[build-system]
requires = ["setuptools>=42.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini-handler"
version = "0.1.0"
description = "OpenAI-compatible server for Google Gemini models"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "google-generativeai",
    "google-genai", 
    "pyyaml", 
    "numpy", 
    "fastapi", 
    "uvicorn", 
    "pydantic>=2.0.0", 
    "pillow", 
    "requests",
    "fastapi", 
    "uvicorn"
]

[project.scripts]
gemini-server = "gemini_handler.cli:main"
